2007-05-23  Koji Arai  <arai@users.sourceforge.jp>

	* tests/lha-test.in: added an optional numeric command-line
	argument, and a command-line switch -n.
        when the numeric argument is specified, only the testsuite is
	performed.  and the -n switch is specified, it is not made cleanup
	trash files which is result of the test.

	* tests/lha-test11: On MS-Windows, should consider the length of
	current path.

	* tests/lha-test11: On MS-Windows, if current directory is too
	deep, skip this test.

2007-05-23  Koji Arai  <arai@users.sourceforge.jp>

	* config.h.in, configure.ac, src/lharc.c: the option -X was deprecated.
	In place of it, added a long option --ignore-mac-files which
	ignore Mac specific files ._*, .DS_Store and Icon\r when the
	archive is created. Thanks to Hiroto Sakai.

2007-05-20  Koji Arai  <arai@users.sourceforge.jp>

	* repository changed to the Subversion.

	* tests/lha-test12: should not use the raw CR code.
	  (when checkout from SVN repos, raw CR code is removed.)

2007-02-24  Koji Arai  <arai@users.sourceforge.jp>

	* src/lharc.c (print_tiny_usage, parse_suboption): added a long
	option "--traditional". it is just the same
	"--convert-filename-case" for the present.

	* src/header.c (get_header): the variable "noconvertcase" changed
	to "convertcase".
	it means that this LHa does not convert filename case automatically.

	* src/lha.h: ditto.

	* src/lharc.c (init_variable): ditto.

	* src/lharc.c (print_tiny_usage, parse_suboption): added a long
	option "--convert-filename-case" that change to the old behavior.

	* src/lharc.c (print_usage, parse_suboption): the "g" option has
	no meaning when extracting.

	* src/header.c (write_header): no upcase filename when the generic
	archive creating.

2007-02-24  Koji Arai  <arai@users.sourceforge.jp>

	* configure.ac: updated version.

	* src/lharc.c (print_usage): updated.

2007-02-24  Koji Arai  <arai@users.sourceforge.jp>

	* src/header.c (copy_path_element, remove_dots, init_header):